objects/UserProvisionEntitlement__c.object
<CustomObject>
    <fields>
        <fullName>Entitlement_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement Code</label>
        <referenceTo>Entitlements__c</referenceTo>
        <relationshipLabel>User Provision Entitlements</relationshipLabel>
        <relationshipName>CatalogEnt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentApp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>User Provision Entitlements</relationshipLabel>
        <relationshipName>ProvEnts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related SF User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Provision_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPA_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Provisioning Account</label>
        <referenceTo>UserProvAccount</referenceTo>
        <relationshipLabel>User Provision Entitlements</relationshipLabel>
        <relationshipName>User_Provision_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Provision Entitlement</label>
    <listViews>
        <fullName>EMS_Level_3_Support_UserProvisionEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>EMS Level 3 Support</label>
        <queue>EMS_Level_3_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gregs_UPE</fullName>
        <columns>Related_SF_User__c</columns>
        <columns>UPA_Parent__c</columns>
        <columns>ParentApp__c</columns>
        <columns>NAME</columns>
        <columns>Entitlement_Code__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentApp__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Related_SF_User__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>UPA_Parent__c</field>
            <operation>equals</operation>
        </filters>
        <label>Gregs UPE</label>
    </listViews>
    <listViews>
        <fullName>R7_Approvers_UserProvisionEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>R7 Approvers</label>
        <queue>R7_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>UPE-{00000000}</displayFormat>
        <label>UserProvisionEntitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Provision Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>